# radiance-cascades

./: .gitmodules  LICENSE  README.md  ideas.md
microglut/: .gitrepo  Cargo.toml
microglut/examples/16-simple-01-white-triangle/: main.rs
microglut/examples/16-simple-02-rotation/: main.rs
microglut/examples/16-simple-03-rotation-animation/: main.rs
microglut/examples/16-simple-04-colored-triangle/: main.rs
microglut/examples/16-simple-05-phong-triangle/: main.rs
microglut/examples/16-simple-06-textured-quad/: main.rs
microglut/examples/16-simple-07-textured-quad-inline/: main.rs
microglut/examples/16-simple-08-color-cube/: main.rs
microglut/examples/16-simple-09-textured-cube/: main.rs
microglut/examples/16-simple-10-mipmapped-cube/: main.rs
microglut/examples/heavy-metal-teapot/: main.rs  minimal.fs  minimal.gs  minimal.vs
microglut/examples/hello-compute-shader/: hello.cs  main.rs
microglut/examples/metaballs/: main.rs  metaballs99.frag  metaballs99.vert
microglut/examples/transparent-teapot/: main.rs
microglut/examples/triangle-tesselation/: main.rs  (+4 more)
microglut/src/: fbo.rs  lib.rs  load_shaders.rs  model.rs  texture.rs  time.rs  util.rs
rc_3d/: Cargo.toml
rc_3d/models/: Rock.mtl  cube.mtl  sponza.mtl
rc_3d/shaders/: hi_z_trace.frag  min_max.frag  naive_ray_marcher.frag  pass.frag  post_pass.frag  rc.frag
rc_3d/src/: camera.rs  cascade_fbo.rs  fbo.rs  fbo_fragment.glsl  main.rs  object.rs  quad_renderer.rs  rc.glsl  scene.frag  scene.vert  scene_fbo.rs  scene_fragment.glsl  scene_vertex.glsl  test.frag  vertex.glsl
rc_3d/ssrt/: raytrace.glsl
(+413 files in other folders)
